Fixed z-index for customer testimonial, fixed relative urls

--- a/styles/customers.scss
+++ b/styles/customers.scss
@@ -8,7 +8,7 @@
 
 .testimonial__info {
     padding: 0.9rem;
-    z-index: 100;
+    z-index: 50;
 }
 
 /* .testimonial__list {
