--- a/styles/main.css
+++ b/styles/main.css
@@ -55,7 +55,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: url("/projects/csspractice/images/main-header-bg.jpg") center/cover no-repeat;
+  background: url("../../images/main-header-bg.jpg") center/cover no-repeat;
   width: 100vw;
   height: 40vh;
 }
