--- a/styles/prod/main.prod.css
+++ b/styles/prod/main.prod.css
@@ -78,7 +78,7 @@
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    background: url("/projects/csspractice/images/main-header-bg.jpg") center/cover no-repeat;
+    background: url("../../images/main-header-bg.jpg") center/cover no-repeat;
     width: 100vw;
     height: 40vh;
   }
